--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,7 @@
-# ---------- Build stage ----------
-FROM node:20-alpine AS builder
+FROM node:20-alpine
 WORKDIR /app
-
 COPY package*.json ./
 RUN npm install
-
 COPY . .
-RUN npm run build
-
-# ---------- Production stage ----------
-FROM node:20-alpine AS runner
-WORKDIR /app
-
-ENV NODE_ENV=production
-
-COPY --from=builder /app/package*.json ./
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/public ./public
-# Removed next.config.js copy line
-
 EXPOSE 3000
-
 CMD ["npm", "start"]
