--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,15 @@
 FROM node:20-alpine
+
 WORKDIR /app
+
 COPY package*.json ./
-RUN npm install
+
+# Install dependencies (CI preferred for lockfile consistency)
+RUN npm ci || npm install
+
 COPY . .
+
 EXPOSE 8000
+ENV PORT=8000
+
 CMD ["npm", "start"]
