--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,17 @@
 FROM node:20-alpine
+
 WORKDIR /app
+
 COPY package*.json ./
-RUN npm install
+
+# Install dependencies (CI preferred for lockfile consistency)
+RUN npm ci || npm install
+
 COPY . .
+
+RUN npm run build
+
 EXPOSE 3000
-CMD ["npm", "start"]
+ENV PORT=3000
+
+CMD ["npm", "run", "start"]
