--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "start": "next start -p 3000 -H 0.0.0.0",
+    "lint" : "eslint"
   },
   "dependencies": {
     "next": "16.1.0",
