--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,22 +2,20 @@ version: "3.8"
 
 services:
   backend:
-    build:
-      context: ./backend
+    image: dvish2003/mern-backend:latest
     container_name: backend_service
     ports:
       - "5000:5000"
     environment:
       PORT: 5000
-      MONGO_DB_URL: "mongodb+srv://dvish2003:Vishan2003%23%23%23@cluster0.ijybos0.mongodb.net/aws-mern?appName=Cluster0"
+      MONGO_DB_URL: "mongodb+srv://dvish2003:Vishan2003%23%23%23@cluster0.ijybo"
     restart: always
 
   frontend:
-    build:
-      context: ./frontend
+    image: dvish2003/mern-frontend:latest
     container_name: frontend_service
     ports:
       - "3000:3000"
+    restart: always
     depends_on:
       - backend
-    restart: always
